# rCore

./: rust-toolchain.toml
os/: .gitignore  Cargo.toml  Makefile  build.rs  linker.ld
os/.cargo/: config.toml
os/src/: batch.rs  config.rs  console.rs  entry.asm  entry.rs  lang.rs  loader.rs  log.rs  main.rs  sbi.rs  timer.rs  utils.rs
os/src/memory_map/: heap.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/tasks/: context.rs  mod.rs  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
users/: Cargo.toml  Makefile  build.py
users/app/: Cargo.toml
users/lib/src/: lib.rs  syscall.rs
